# gesture-data-capture

./: README.md  imucnnmodel.drawio  package.json  pyproject.toml
analysis/: dataset_tools.py  pyproject.toml  training.ipynb
client/src/: app-test.js  app.js  index.html  test.js
client/src/handy-mod/: Handy.js
client/src/lib/: DataCapture.js  IO.js  InteractiveElements.js  Interpolation.js  XRHandModelFactory.js
server/: .pdm.toml  app.py  pyproject.toml
server/collected_data/: 127.0.0.1-1636963101915781700.json  127.0.0.1-1636963441684074600.json  127.0.0.1-1636963671551478900.json
server/server/: app.py
server/static/: app.js  app.js.map  styles.css  styles.css.map
server/templates/: index.html
src/: DummyXRHandModel.js  app.js  demo.html  index.html  styles.css
src/lib/: DataCapture.js  GestureDataCapture.js  InteractiveElements.js  Interpolation.js  ObjectUtils.js  PoseUtils.js
