[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Heng", email = ""},
]
dependencies = [
    "flask~=2.0",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
